<?xml version="1.0"?>
<package>
  <name>universal_map_server</name>
  <version>0.0.0</version>
  <description>The universal_map_server package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tera@todo.todo">tera</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
<!--  <build_depend>gird_map_cv</build_depend>-->
  <build_depend>grid_map_loader</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_rviz_plugin</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_module</build_depend>
  <build_depend>filters</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
<!--  <run_depend>gird_map_cv</run_depend>-->
  <run_depend>grid_map_loader</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_core</run_depend>
  <run_depend>grid_map_rviz_plugin</run_depend>
  <run_depend>grid_map_visualization</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cmake_module</run_depend>
  <run_depend>filters</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>